5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1798_2567.log
== TEST (2019-06-10 15:43:34) 
-- CODE:
v = input(": ")
for i in range(size(v)):
	i = (v,0,-1)
	print(i*"*")
for i in range(size(v)):
	i = (1,v+1)
	print(i*"*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(size(v)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:45:02) 
-- CODE:
v = input(": ")
for i in range(v,0,-1):
	print(i*"*")
for i in range(1,v+1):
	print(i*"*")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(v,0,-1):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:46:38) 
-- CODE:
v = int(input(": "))
for i in range(v,0,-1):
	print(i*"*")
for i in range(1,v+1):
	print(i*"*")
	
	
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 15:46:41) 
-- CODE:
v = int(input(": "))
for i in range(v,0,-1):
	print(i*"*")
for i in range(1,v+1):
	print(i*"*")
	
	
-- EXECUTION TIME:
0.749586
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
